# 3D-LiDAR-Object-Detection-DBSCAN-KITTI

./: LICENSE  README.md
ros_ws/src/lidar_detect_ros/: CMakeLists.txt  package.xml
ros_ws/src/lidar_detect_ros/nodes/: kitti_label_to_velo.py  lidar_bounding_box.py  match_clusters_to_labels.py  publish_kitti_bin.py
