<?xml version="1.0"?>
<package format="2">
  <name>lidar_detect_ros</name>
  <version>0.0.1</version>
  <description>LiDAR detection nodes (subscriber/matcher/publisher)</description>
  <maintainer email="you@example.com">Raja Asim Mustafa</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
